@@ -36,7 +36,7 @@
 	<h1>Tutorial 4 - how to use split capabilities in conjonction with MPI?</h1>
 	<p><a href="MPI_output_of_a_density_f90.html">The fourth tutorial</a> shows how to use the split definitions as defined in the specifications to handle MPI computations. This is possible with the help of the <a href="../group_level/etsf_io_f90.html#robo107">etsf_split</a> structure. This tutorial create a density file with a paralelisation on z planes. Each process compute a gaussian in its own z planes and create an ETSF file with a split on <em>number_of_grid_points_vector3</em>. Thanks to <a href="../utils/binary.html"><code>etsf_io</code></a> the created files can be then gathered into one unique file.</p>
 	<h1>Tutorial 5 - mixing ETSF and non-ETSF variables in file creation (tutorial 1 enhancement)</h1>
-	<p><a href="mix_ETSF_and_non_ETSF_f90.html">The fifth tutorial</a> is not focus on the low level API but it uses it in several areas. This tutorial shows how to write an ETSF file with additional non-ETSF variables. These variables are defined and written directly by using the low level API. Besides it also shows how to use the etsf_io_<group>_put() methods in the context of a concurrent list of ETSF and non-ETSF variables.</p>
+	<p><a href="mix_ETSF_and_non_ETSF_f90.html">The fifth tutorial</a> is not focus on the low level API but it uses it in several areas. This tutorial shows how to write an ETSF file with additional non-ETSF variables. These variables are defined and written directly by using the low level API. Besides it also shows how to use the etsf_io_&lt;group&gt;_put() methods in the context of a concurrent list of ETSF and non-ETSF variables.</p>
 	<h1>Tutorial 6 - simple read of a wavefunction file
 (continuation of tutorial 2)</h1>
 	<p><a href="read_a_file_f90.html">The sixth tutorial</a>
